@@ -50,7 +50,7 @@ TIGHTDB_TABLE_2(SharedTable2,
     TDBContext* fromDisk = [TDBContext contextWithPersistenceToFile:@"employees.tightdb" error:nil];
 
     [fromDisk readWithBlock:^(TDBTransaction* group) {
-            SharedTable2* diskTable = [group getTableWithName:@"employees" asTableClass:[SharedTable2 class]];
+            SharedTable2* diskTable = [group tableWithName:@"employees" asTableClass:[SharedTable2 class]];
             NSLog(@"Disktable size: %zu", [diskTable rowCount]);
             for (size_t i = 0; i < [diskTable rowCount]; i++) {
                 SharedTable2Row *cursor = [diskTable rowAtIndex:i];
@@ -62,7 +62,7 @@ TIGHTDB_TABLE_2(SharedTable2,
 
 
     [fromDisk writeWithBlock:^(TDBTransaction* group) {
-            SharedTable2* diskTable = [group getTableWithName:@"employees" asTableClass:[SharedTable2 class]];
+            SharedTable2* diskTable = [group tableWithName:@"employees" asTableClass:[SharedTable2 class]];
             NSLog(@"Disktable size: %zu", [diskTable rowCount]);
             for (size_t i = 0; i < 50; i++) {
                 [diskTable addHired:YES Age:i];
@@ -72,7 +72,7 @@ TIGHTDB_TABLE_2(SharedTable2,
 
 
     [fromDisk writeWithBlock:^(TDBTransaction* group) {
-            SharedTable2* diskTable = [group getTableWithName:@"employees" asTableClass:[SharedTable2 class]];
+            SharedTable2* diskTable = [group tableWithName:@"employees" asTableClass:[SharedTable2 class]];
             NSLog(@"Disktable size: %zu", [diskTable rowCount]);
             for (size_t i = 0; i < 50; i++) {
                 [diskTable addHired:YES Age:i];
@@ -82,19 +82,19 @@ TIGHTDB_TABLE_2(SharedTable2,
 
 
     [fromDisk writeWithBlock:^(TDBTransaction* group) {
-            SharedTable2* diskTable = [group getTableWithName:@"employees" asTableClass:[SharedTable2 class]];
+            SharedTable2* diskTable = [group tableWithName:@"employees" asTableClass:[SharedTable2 class]];
             NSLog(@"Disktable size: %zu", [diskTable rowCount]);
             for (size_t i = 0; i < 50; i++) {
                 [diskTable addHired:YES Age:i];
             }
         
-            STAssertNil([group getTableWithName:@"Does not exist"], @"Table does not exist");
+            STAssertNil([group tableWithName:@"Does not exist"], @"Table does not exist");
 
             return YES; // commit
         } error:nil];
 
     [fromDisk readWithBlock:^(TDBTransaction* group) {
-            SharedTable2* diskTable = [group getTableWithName:@"employees" asTableClass:[SharedTable2 class]];
+            SharedTable2* diskTable = [group tableWithName:@"employees" asTableClass:[SharedTable2 class]];
             NSLog(@"Disktable size: %zu", [diskTable rowCount]);
         
         STAssertThrows([diskTable removeAllRows], @"Not allowed in readtransaction");
@@ -126,7 +126,7 @@ TIGHTDB_TABLE_2(SharedTable2,
     } error:nil];
     
     [fromDisk readWithBlock:^(TDBTransaction* group) {
-        TDBTable *t = [group getTableWithName:@"table"];
+        TDBTable *t = [group tableWithName:@"table"];
        
         TDBQuery *q = [t where];
         
@@ -139,7 +139,7 @@ TIGHTDB_TABLE_2(SharedTable2,
         STAssertTrue([q countRows] == 1, @"No rows have been removed");
         STAssertTrue([v rowCount] == 1, @"No rows have been removed");
         
-        STAssertNil([group getTableWithName:@"Does not exist"], @"Table does not exist");
+        STAssertNil([group tableWithName:@"Does not exist"], @"Table does not exist");
     }];
 }
 
@@ -165,7 +165,7 @@ TIGHTDB_TABLE_2(SharedTable2,
 
     
     [sg writeWithBlock:^(TDBTransaction* group) {
-        TDBTable *t = [group getTableWithName:@"t"];
+        TDBTable *t = [group tableWithName:@"t"];
         [t addColumnWithName:@"col" andType:TDBBoolType];
         NSUInteger rowIndex = [t addRow:nil];
         TDBRow *row = [t rowAtIndex:rowIndex];
@@ -181,7 +181,7 @@ TIGHTDB_TABLE_2(SharedTable2,
     
     
     [sg2 writeWithBlock:^(TDBTransaction* group) {
-        TDBTable *t = [group getTableWithName:@"t"];
+        TDBTable *t = [group tableWithName:@"t"];
         [t addRow:nil]; /* Adding an empty row */
         return YES;
     } error:nil];
@@ -212,11 +212,11 @@ TIGHTDB_TABLE_2(SharedTable2,
     
     [c readWithBlock:^(TDBTransaction *transaction) {
         
-        STAssertThrows([transaction getTableWithName:nil], @"name is nil");
-        STAssertThrows([transaction getTableWithName:@""], @"name is empty");
+        STAssertThrows([transaction tableWithName:nil], @"name is nil");
+        STAssertThrows([transaction tableWithName:@""], @"name is empty");
         STAssertThrows([transaction createTableWithName:@"same name"], @"creating table not allowed in read transaction");
         STAssertThrows([transaction createTableWithName:@"name"], @"creating table not allowed in read transaction");
-        STAssertNil([transaction getTableWithName:@"weird name"], @"get table that does not exists return nil");
+        STAssertNil([transaction tableWithName:@"weird name"], @"get table that does not exists return nil");
     }];
 }
 
@@ -254,13 +254,13 @@ TIGHTDB_TABLE_2(SharedTable2,
         BOOL changed = [context2 pinReadTransactions];
         STAssertTrue(changed, nil);
         [context2 readWithBlock:^(TDBTransaction *transaction) {
-            TDBTable *t = [transaction getTableWithName:@"test"];
+            TDBTable *t = [transaction tableWithName:@"test"];
             STAssertEquals([[t rowAtIndex:0] boolInColumnWithIndex:0], YES, nil);
         }];
     }
     {   // commit new data in another context, without unpinning
         [context1 writeWithBlock:^BOOL(TDBTransaction *transaction) {
-            TDBTable *t = [transaction getTableWithName:@"test"];
+            TDBTable *t = [transaction tableWithName:@"test"];
             [t addRow:@[@NO]];
             return YES;
         } error:nil];
@@ -268,14 +268,14 @@ TIGHTDB_TABLE_2(SharedTable2,
     }
     {   // validate that we can see previous commit if we're not pinned
         [context1 readWithBlock:^(TDBTransaction *transaction) {
-            TDBTable *t = [transaction getTableWithName:@"test"];
+            TDBTable *t = [transaction tableWithName:@"test"];
             STAssertEquals([[t rowAtIndex:1] boolInColumnWithIndex:0], NO, nil);
         }];
         
     }
      {   // validate that we can NOT see previous commit from within a pinned transaction
         [context2 readWithBlock:^(TDBTransaction *transaction) {
-            TDBTable *t = [transaction getTableWithName:@"test"];
+            TDBTable *t = [transaction tableWithName:@"test"];
             STAssertEquals(t.rowCount, (NSUInteger)1, @"Still only 1 row");
         }];
         
@@ -285,7 +285,7 @@ TIGHTDB_TABLE_2(SharedTable2,
         BOOL changed = [context2 pinReadTransactions];
         STAssertTrue(changed, @"changes since last transaction");
         [context2 readWithBlock:^(TDBTransaction *transaction) {
-            TDBTable *t = [transaction getTableWithName:@"test"];
+            TDBTable *t = [transaction tableWithName:@"test"];
             STAssertEquals(t.rowCount, (NSUInteger)2, @"Now we see 2 rows");
             STAssertEquals([[t rowAtIndex:1] boolInColumnWithIndex:0], NO, nil);
         }];
